# Ray-Tracer-Challenge

./: .gitignore  README.md
C/: .gitignore  CMakeLists.txt  run.sh
C/include/: canvas.h  color.h  rtmath.h  tuple.h
C/src/: CMakeLists.txt  canvas.c  color.c  main.c  projectile.c  tuple.c
C/tests/: CMakeLists.txt  canvas_test.cpp  color_test.cpp  tuple_test.cpp
CSharp/: CSharp.csproj  CSharp.sln  Canvas.cs  Color.cs  Computations.cs  Intersection.cs  Intersections.cs  Material.cs  MathHelper.cs  Matrix.cs  Point.cs  PointLight.cs  Program.cs  RTObject.cs  Ray.cs  Sphere.cs  Tuple.cs  Vector.cs  World.cs
CSharp/CSharpTest/: CSharpTest.csproj  Camera.cs  CameraTest.cs  IntersectionTest.cs  LightTest.cs  MaterialTest.cs  MatrixTest.cs  RayTest.cs  SphereTest.cs  TransformationTest.cs  TupleTest.cs  WorldTest.cs  YamlTest.cs
CSharp/Circle/: Program.cs
CSharp/Lights/: AreaLight.cs  ILight.cs  PointLight.cs
CSharp/Material/: Color.cs  Material.cs
CSharp/Math/: Computations.cs  Intersection.cs  Intersections.cs  MathHelper.cs  Matrix.cs  Point.cs  Ray.cs  Sequence.cs  Tuple.cs  Vector.cs
CSharp/Parsers/: ObjFileParser.cs  Values.cs  YamlParser.cs
CSharp/Pattern/: Program.cs
CSharp/Patterns/: BlendedPattern.cs  CheckersPattern.cs  CubeMapPattern.cs  GradientPattern.cs  NestedPattern.cs  PerlinNoisePattern.cs  RTPattern.cs  RadialGradientPattern.cs  RingPattern.cs  SolidColorPattern.cs  StripePattern.cs  TextureMap.cs  UVAlignCheck.cs  UVImage.cs
CSharp/Plane/: Plane.csproj  Program.cs
CSharp/Projectile/: Program.cs  Projectile.csproj
CSharp/Render/: Camera.cs  Canvas.cs  ViewTransform.cs  World.cs
CSharp/Rtc/: CommandLine.cs  Extensions.cs  InputArguments.cs  Program.cs  SceneBuilder.cs  rtc.csproj
CSharp/Scene/: Program.cs
CSharp/Shadows/: Program.cs
CSharp/Shapes/: BoundingBox.cs  CSG.cs  Cone.cs  Cube.cs  Cylinder.cs  Group.cs  Plane.cs  RTObject.cs  Sphere.cs  (+2 more)
Cpp/: .gitignore  CMakeLists.txt
Cpp/include/: canvas.h  color.h  rtmath.h  tuple.h
Cpp/src/: CMakeLists.txt  canvas.cpp  color.cpp  main.cpp  projectile.cpp  rtmath.cpp  tuple.cpp
Cpp/tests/: CMakeLists.txt  canvas_test.cpp  color_test.cpp  tuple_test.cpp
Java/: .gitignore  .project  pom.xml  run.sh
Python/: projectile.ppm  run.sh  setup.py
Scenes/: SimpleYaml.yml  SimpleYaml2.yaml  SimpleYaml3.yml  SimpleYaml4.yml  SimpleYaml5.yml  SimpleYaml6.yml  SimpleYaml7.yml
(+102 files in other folders)
